--- a/pt3b_box_trend_overlay.Rmd
+++ b/pt3b_box_trend_overlay.Rmd
@@ -33,8 +33,6 @@ metadata <- read_csv("Data/station_metadata.csv")
 ```
 
 # Subset Stations of Interest
-
- "For this, we will be working with the subset of stations that have at least 5 years of data (inclusive of those used in the trend analysis).  From the station metadata, I estimate there are ~175 stations that meet this minimum for Secchi, CHLa, TN and TP (~40 for TSS)."  (*Still min 3 Nobs, presumably*??)
  
 ```{r `subset data`}
 # Function to subset data based on a minimum years of observations threshold. All station-variables in `data` have already been filtered to include only those with min 3 measurements per year (May-Oct). 
@@ -57,9 +55,11 @@ subset_data <- list(
   TSS = subset_variable_data("nYears_TSS"),
   DIN = subset_variable_data("nYears_DIN")
 )
+
 ```
 
-### Outlier Removal
+### Outlier Removal & Subsetting
+
 ```{r}
 ## DIN outlier from station 4AROA192.94
 din_data <- subset_data[["DIN"]]
@@ -77,16 +77,13 @@ chla_data$CHLa[chla_data$STATION_ID == "5ASRN000.66"][index2] <- NA
 subset_data[["CHLa"]] <- chla_data
 
 
+## Remove data from pre-1995 Secchi
+subset_data[["SECCHI_DEPTH"]] <- subset_data[["SECCHI_DEPTH"]] %>%
+  filter(Year >= 1995)
 
-## Remove data from pre-1995 for CHLa and Secchi
-for (var in c("CHLa", "SECCHI_DEPTH")) {
-  subset_data[[var]] <- subset_data[[var]] %>%
-    filter(Year >= 1995)
-}
-
-## Filter to only include 1980-2005 for TSS
-subset_data[["TSS"]] <- subset_data[["TSS"]] %>%
-  filter(Year >= 1980, Year <= 2005)
+## Filter DIN to only include data up to 2004
+subset_data[["DIN"]] <- subset_data[["DIN"]] %>%
+  filter(Year <= 2004)
 
 ```
 
@@ -103,23 +100,24 @@ Working backwards from 2023, with first increment (2019-2023) being 4 years.
 ```{r}
 create_intervals <- function(year) {
   case_when(
-    year >= 2020 ~ "2020-2023",
-    year >= 2015 ~ "2015-2019",
-    year >= 2010 ~ "2010-2014",
-    year >= 2005 ~ "2005-2009",
-    year >= 2000 ~ "2000-2004",
-    year >= 1995 ~ "1995-1999",
-    year >= 1990 ~ "1990-1994",
-    year >= 1985 ~ "1985-1989",
-    year >= 1980 ~ "1980-1984",
-    year >= 1975 ~ "1975-1979",
-    year >= 1972 ~ "1972-1974",
+    year >= 2020 ~ "2020-23",
+    year >= 2015 ~ "2015-19",
+    year >= 2010 ~ "2010-14",
+    year >= 2005 ~ "2005-09",
+    year >= 2000 ~ "2000-04",
+    year >= 1995 ~ "1995-99",
+    year >= 1990 ~ "1990-94",
+    year >= 1985 ~ "1985-89",
+    year >= 1980 ~ "1980-84",
+    year >= 1975 ~ "1975-79",
+    year >= 1972 ~ "1972-74",
     TRUE ~ NA
   )
 }
 
 
 
+# Derive May-Oct avgs for each station-year
 # Use function to assign each May-Oct avg to an interval, by variable
 boxplot_data <- list()
 for (var in names(subset_data)) {
@@ -137,7 +135,39 @@ for (var in names(subset_data)) {
 
 }
 
+# Create log10 transformed CHLA data for plotting
+boxplot_data[["CHLa_log10"]] <- boxplot_data[["CHLa"]] %>%
+  mutate(yearly_mean = log10(yearly_mean ))
+
 ```
+
+### Continuous Axis for Boxplot Data
+
+To overlay your MBLM trend lines onto the box plots in ggplot2, I need to align the categorical x-axis (the 5-year intervals) with the continuous x-axis (Year) used for the trend lines.
+
+    Convert the Categorical Intervals to Numeric Midpoints: Assign numeric values (midpoints of the intervals) to each interval, effectively transforming your categorical x-axis into a continuous one.
+
+    Update Data Frames: Add these midpoints to your boxplot_data so that each observation has an interval_midpoint.
+
+    Adjust Plots: Modify your plotting code to use interval_midpoint as the x-axis, allowing both the box plots and trend lines to share the same continuous x-axis.
+
+```{r}
+# Create a data frame mapping intervals to midpoints
+intervals_df <- data.frame(
+  interval = c("1972-74", "1975-79", "1980-84", "1985-89",
+               "1990-94", "1995-99", "2000-04", "2005-09",
+               "2010-14", "2015-19", "2020-23"),
+  interval_midpoint = c(1973, 1977, 1982, 1987, 1992, 1997, 2002, 2007, 2012, 2017, 2021.5)
+)
+
+# Merge interval_midpoint into boxplot_data
+for (var in names(boxplot_data)) {
+  boxplot_data[[var]] <- boxplot_data[[var]] %>%
+    left_join(intervals_df, by = "interval")
+}
+
+```
+
 
 How many observations per interval, per variable? This information needs to be incorporated into the plots.
 
@@ -156,189 +186,6 @@ for (var in names(boxplot_data)) {
 ```
 
 
-## Create Box-Whisker Plots
-
-```{r}
-library(ggplot2)
- 
-# ------------ SECCHI DEPTH  -------------------------
-  plot_secchi <- ggplot(boxplot_data[["SECCHI_DEPTH"]], aes(x = interval, y = yearly_mean)) +
-    geom_boxplot(aes(fill = interval), outlier.shape = NA) +  
-    geom_jitter(width = 0.1, alpha = 0.2, size = 0.7) + 
-    geom_text(data = obs_counts[["SECCHI_DEPTH"]], aes(x = interval, y = max(boxplot_data[["SECCHI_DEPTH"]]$yearly_mean, na.rm = TRUE), 
-                                   label = paste("n =", n)), 
-            vjust = -0.5, size = 3, color = "black") +  # Add observation counts
-    labs(
-      title = "Secchi Depth",
-      subtitle = "No outliers excluded for visualization.",
-      x = NULL,
-      y = "Depth (m)"
-    ) +
-    theme_minimal() +
-    theme(legend.position = "none",
-          plot.subtitle = element_text(size = 10),
-          axis.text.x = element_text(angle = 45, hjust = 1, size = 10))  
-  
-  print(plot_secchi)
-  
-# ------------- Chlorophyll-A  -------------------------
-  ## Filter out CHLa values above 300 to minimize y axis distortion
-  boxplot_data[["CHLa"]] <- boxplot_data[["CHLa"]] %>%
-    filter(yearly_mean <= 50)
-  
-  plot_chla <- ggplot(boxplot_data[["CHLa"]], aes(x = interval, y = yearly_mean)) +
-    geom_boxplot(aes(fill = interval), outlier.shape = NA) +  
-    geom_jitter(width = 0.1, alpha = 0.2, size = 0.7) +  
-    geom_text(data = obs_counts[["CHLa"]], aes(x = interval, y = max(boxplot_data[["CHLa"]]$yearly_mean, na.rm = TRUE), 
-                                   label = paste("n =", n)), 
-            vjust = -0.5, size = 3, color = "black") +  # Add observation counts
-    labs(
-      title = "Chlorophyll-A",
-      subtitle = "CHLa values above 50 (n = 63) excluded for visualization purposes.",
-      x = NULL,
-      y = "CHLa (\u03BCg L\u207B\u00B9)"
-    ) +
-    theme_minimal() +
-    theme(legend.position = "none",
-          plot.subtitle = element_text(size = 10),
-          axis.text.x = element_text(angle = 45, hjust = 1, size = 10))    
-  
-  print(plot_chla)
-  
-    # ------------ CHLa log base 10 transformed -------------------------
-        trnsfrm.data <- boxplot_data[["CHLa"]] %>%
-          mutate(log10 = log10(yearly_mean))
-  
-          # Filter outliers above 2 to minimize y axis distortion
-          trnsfrm.data <- trnsfrm.data %>%
-            filter(log10 <= 2)
-  
-        plot_chlalog10 <- ggplot(trnsfrm.data, aes(x = interval, y = log10)) +
-          geom_boxplot(aes(fill = interval), outlier.shape = NA) +  
-          geom_jitter(width = 0.1, alpha = 0.2, size = 0.7) +  
-          geom_text(data = obs_counts[["CHLa"]], aes(x = interval, y = max(trnsfrm.data$log10, na.rm = TRUE), 
-                                         label = paste("n =", n)), 
-                  vjust = -0.5, size = 3, color = "black") +  # Add observation counts
-          labs(
-            title = "Chlorophyll-A (log\u2081\u2080 transformed)",
-            subtitle = "log\u2081\u2080(CHLa) values above 2 (n = 11) excluded for visualization purposes.",
-            x = NULL,
-            y = "log\u2081\u2080(CHLa) (\u03BCg L\u207B\u00B9)"
-          ) +
-          theme_minimal() +
-          theme(legend.position = "none",
-                plot.subtitle = element_text(size = 10),
-                axis.text.x = element_text(angle = 45, hjust = 1, size = 10))   
-        
-        print(plot_chlalog10)
-
-
-# ------------- Total Nitrogen -------------------------
-  ## Filter out TN values above 2 to minimize y axis distortion
-  boxplot_data[["NITROGEN_TOTAL"]] <- boxplot_data[["NITROGEN_TOTAL"]] %>%
-    filter(yearly_mean <= 2)
-  
-  plot_tn <- ggplot(boxplot_data[["NITROGEN_TOTAL"]], aes(x = interval, y = yearly_mean)) +
-    geom_boxplot(aes(fill = interval), outlier.shape = NA) +
-    geom_jitter(width = 0.15, alpha = 0.2, size = 0.7) +
-    geom_text(data = obs_counts[["NITROGEN_TOTAL"]], 
-              aes(x = interval, y = max(boxplot_data[["NITROGEN_TOTAL"]]$yearly_mean, na.rm = TRUE), 
-                                                       label = paste("n =", n)), 
-            vjust = -0.5, size = 3, color = "black") +  
-    labs(
-      title = "Total Nitrogen",
-      subtitle = "TN values above 2 (n = 28) excluded for visualization purposes.",
-      x = NULL,
-      y = "TN (mg N L\u207B\u00B9)"
-  ) +
-    theme_minimal() +
-    theme(legend.position = "none",
-        plot.subtitle = element_text(size = 10),
-        axis.text.x = element_text(angle = 45, hjust = 1, size = 10))   
-  
-  print(plot_tn)
-
-
-# ------------- Total Phosphorus -------------------------
-  ## Filter out TP values above .3 to minimize y axis distortion
-  boxplot_data[["PHOSPHORUS_TOTAL"]] <- boxplot_data[["PHOSPHORUS_TOTAL"]] %>%
-    filter(yearly_mean <= .3)
-  
-  plot_tp <- ggplot(boxplot_data[["PHOSPHORUS_TOTAL"]], aes(x = interval, y = yearly_mean)) +
-    geom_boxplot(aes(fill = interval), outlier.shape = NA) +  
-    geom_jitter(width = 0.15, alpha = 0.2, size = 0.7) +
-    geom_text(data = obs_counts[["PHOSPHORUS_TOTAL"]], 
-              aes(x = interval, y = max(boxplot_data[["PHOSPHORUS_TOTAL"]]$yearly_mean, na.rm = TRUE), 
-                                                       label = paste("n =", n)), 
-            vjust = -0.5, size = 3, color = "black") +  
-    labs(
-      title = "Total Phosphorus",
-      subtitle = "TP values above .3 (n = 21) excluded for visualization purposes.",
-      x = NULL,
-      y = "TP (mg N L\u207B\u00B9)"
-  ) +
-    theme_minimal() +
-    theme(legend.position = "none",
-        plot.subtitle = element_text(size = 10),
-        axis.text.x = element_text(angle = 45, hjust = 1, size = 10))    
-  
-  print(plot_tp)
-
-  
-# ------------- Total Suspended Solids-------------------------
-  ## Filter out TSS values above 50 (n = 34) to minimize y axis distortion
-  boxplot_data[["TSS"]] <- boxplot_data[["TSS"]] %>%
-    filter(yearly_mean <= 50)
-  
-  plot_tss <- ggplot(boxplot_data[["TSS"]], aes(x = interval, y = yearly_mean)) +
-    geom_boxplot(aes(fill = interval), outlier.shape = NA) +  
-    geom_jitter(width = 0.15, alpha = 0.2, size = 0.7) +
-    geom_text(data = obs_counts[["TSS"]], 
-              aes(x = interval, y = max(boxplot_data[["TSS"]]$yearly_mean, na.rm = TRUE), 
-                                                       label = paste("n =", n)), 
-            vjust = -0.5, size = 3, color = "black") +  
-    labs(
-      title = "Total Suspened Solids",
-      subtitle = "TSS values above 50 (n = 6) excluded for visualization purposes.",
-      x = NULL,
-      y = "TSS (mg N L\u207B\u00B9)"
-  ) +
-    theme_minimal() +
-    theme(legend.position = "none",
-        plot.subtitle = element_text(size = 10),
-        axis.text.x = element_text(angle = 45, hjust = 1, size = 10))    
-  
-  print(plot_tss)
- 
-
-```
-### Continuous Axis for Boxplot Data
-
-To overlay your MBLM trend lines onto the box plots in ggplot2, I need to align the categorical x-axis (the 5-year intervals) with the continuous x-axis (Year) used for the trend lines.
-
-    Convert the Categorical Intervals to Numeric Midpoints: Assign numeric values (midpoints of the intervals) to each interval, effectively transforming your categorical x-axis into a continuous one.
-
-    Update Data Frames: Add these midpoints to your boxplot_data so that each observation has an interval_midpoint.
-
-    Adjust Plots: Modify your plotting code to use interval_midpoint as the x-axis, allowing both the box plots and trend lines to share the same continuous x-axis.
-
-```{r}
-# Create a data frame mapping intervals to midpoints
-intervals_df <- data.frame(
-  interval = c("1972-1974", "1975-1979", "1980-1984", "1985-1989",
-               "1990-1994", "1995-1999", "2000-2004", "2005-2009",
-               "2010-2014", "2015-2019", "2020-2023"),
-  interval_midpoint = c(1973, 1977, 1982, 1987, 1992, 1997, 2002, 2007, 2012, 2017, 2021.5)
-)
-
-# Merge interval_midpoint into boxplot_data
-for (var in names(boxplot_data)) {
-  boxplot_data[[var]] <- boxplot_data[[var]] %>%
-    left_join(intervals_df, by = "interval")
-}
-
-```
-
 
 # MBLM Trend Estimates
 
@@ -351,6 +198,18 @@ Yearly means for each variable at each station where 5y or more of data (min 3 o
 
 ```{r, message=FALSE}
 vars <- names(subset_data)
+
+
+## Second round of subsetting, now that boxplot data has been created. This allows the box plots for these varaibles to include all intervals, while the trend line will be based on a restricted subset, and thus only span the middle intervals where data is most robust.
+## Filter to only include 1980-2005 for TSS
+subset_data[["TSS"]] <- subset_data[["TSS"]] %>%
+  filter(Year >= 1980, Year <= 2004)
+
+## Remove data pre-1990 for CHLa
+subset_data[["CHLa"]] <- subset_data[["CHLa"]] %>%
+  filter(Year >= 1995)
+
+
 
 # List to store station averages for each variable
 stationAvgs <- list()
@@ -393,7 +252,8 @@ for (var in vars) {
   }
 }
 
-# Create data frame to save and share with Paul
+
+
 avg_df_list <- list()
 
 for (var in vars) {
@@ -401,9 +261,11 @@ for (var in vars) {
   avg_df_list[[var]] <- df
 }
 
-all_vars_avg_df <- bind_rows(avg_df_list, .id = "variable")
+## CHLA log10 transformed
+avg_df_list[["CHLa_log10"]] <- avg_df_list[["CHLa"]] %>%
+  mutate(MAY_OCT_AVG = log10(MAY_OCT_AVG))
 
-# write_csv(all_vars_avg_df, "data/population_level_data/population_avg_data.csv")
+
 
 ```
 
@@ -418,9 +280,7 @@ all_vars_avg_df <- bind_rows(avg_df_list, .id = "variable")
 # Essential to use the stationAvgs list, as the boxplot_data lsit, despite having been derived from the same soruce and in the same sort of way, has had lots of outliers filtered out for plotting. Those outliers should still be in the mblm trend analysis.
 mblm_func <- function(variable) {
   
-  averages_list <- stationAvgs[[variable]]
-  # Bind into single data frame for use in mblm
-  df <- bind_rows(averages_list)
+  df <- avg_df_list[[variable]]
   
     # Run mblm model
     model <- mblm::mblm(MAY_OCT_AVG ~ Year, data = df)
@@ -441,6 +301,7 @@ mblm_func <- function(variable) {
 
 
 # ------- Run custom function in for loop -------
+vars <- names(avg_df_list)
 
 # Store population-level trend estimates for each variable in list
 trends_results <- list()
@@ -448,7 +309,6 @@ trends_results <- list()
   for (var in vars) {
   trends_results[[var]] <- mblm_func(var)
   }
-
 
 ```
 
@@ -490,14 +350,14 @@ Because the model intercept is based on x=0, and the x-axes are somewhere betwee
 
 `adjusted_intercept = model_intercept + model_slope * min(Year)`
 
-This requires first determining the minimum year for each variable at each station
+This requires first determining the minimum year for each variable at each station...
 
 ```{r}
 minYear <- list()
 
 for (var in vars) {
   
-  df <- bind_rows(stationAvgs[[var]])
+  df <- avg_df_list[[var]]
   
   # Initialize the data frame for storing minimum years
   minYear.df <- data.frame(variable = var,
@@ -511,160 +371,181 @@ minYear.df <- bind_rows(minYear)
 
 ```
 
-Then using that data frame to calculate the adjusted intercept
+...then using that data frame to calculate the adjusted intercept
 
 ```{r}
 regressions_adjusted <- regStats_allVars %>%
   left_join(minYear.df, by = c("variable")) %>%
   mutate(adjusted_intercept = model_intercept + model_slope * minYear)
 
-```
 
-#### Plotting
-
-```{r, echo=FALSE}
-library(ggplot2)
-# use regressions_adjusted along with the station averages list
-# recall that, due to thow the output of the `mblm` function is structured, it cannot be passed to geom_smooth as a smoothing function. This results in having to 'manually' draw the trend lines.
-
-# List to hold all plots 
-all_plots_list <- list()
-  
-  for (current_var in names(stationAvgs)) {
-    
-    df_avgs <- stationAvgs[[current_var]] %>%
-      bind_rows()
-    
-    df_reg <- regressions_adjusted %>%
-      filter(variable == current_var)
-    
-    var_plot <- ggplot(df_avgs, aes(x = Year, y = MAY_OCT_AVG)) +
-      geom_point(alpha = .3, position = position_jitter(width = 0.3)) +
-        # Use annotate() instead of geom_segment() for the trend line. ggplot expects each aesthetic  to be mapped to a column in the data, and geom_segment() - which I originally used - was receiving values (x, xend, y, and yend) that had only a single length (min and max). Also, aes() is designed to map aesthetics to a SINGLE dataframe, whereas this plot requires reference to two dfs to produce the trend lines.Using `annotate` eliminates the warning because it explicitly adds a line based on single values (rather than having ggplot2 try to match them to rows in df_avgs)
-      annotate("segment", x = min(df_avgs$Year), 
-               xend = max(df_avgs$Year), 
-               y = df_reg$adjusted_intercept, 
-               yend = 
-                 df_reg$adjusted_intercept + df_reg$model_slope * (max(df_avgs$Year) - min(df_avgs$Year)),
-               # calculate the y-value at the endpoint by adding the total change in y (slope * difference_in_years) to the intercept at the starting point
-               color = "red", linewidth = .6, alpha = .8) +
-      labs(title = current_var,
-           subtitle = paste("Slope: ", round(df_reg$model_slope, 5),
-                            "\np-value: ", round(df_reg$model_pval, 5)),
-           x = "Year", y = NULL) +
-      theme_minimal() +
-      theme(plot.title = element_text(face = "bold"))
-
-  all_plots_list[[current_var]] <- var_plot
-}
-
-
-# The plots are generated, now patch them together.
-library(cowplot)
-
-  # Use cowplot::plot_grid to combine plots 
-  combined_plot <- plot_grid(plotlist = all_plots_list, ncol = 2)
-  print(combined_plot)
-  
-  # ggsave("figures/population_trend_plots.jpg", combined_plot, height = 10, units = "in", dpi = 600)
+### NOTE 11/8/2024  -- Data included in the models was modified per Paul's email on 11/7. Thus, reg. stats for several of the variables do not match those I sent to him on 11/5 (e.g., DIN now only includes data through 2004; TSS data is now 1980-2005, etc.)
 
 ```
+
 
 # Overlay Trend Lines on Box Plots
 
 ```{r}
-# Assuming you have 'df_reg' and 'df_avgs' for each variable
-# Example for "SECCHI_DEPTH"
-
-# Prepare data for trend line
-df_avgs <- bind_rows(stationAvgs[["SECCHI_DEPTH"]]) %>% 
-  filter(Year >= 1995) # Filter for years >= 1995
-
-df_reg <- regressions_adjusted %>%
-  filter(variable == "SECCHI_DEPTH")
-
-# Generate a sequence of years for plotting the trend line
-year_seq <- seq(min(df_avgs$Year), max(df_avgs$Year), by = 1)
-
-# Compute predicted values from the model
-trend_data <- data.frame(
-  Year = year_seq,
-  Trend = df_reg$model_intercept + df_reg$model_slope * year_seq
+library(ggtext)
+# Create named list for defining y axis labels in plots
+y_titles <- list(
+  SECCHI_DEPTH = "Depth (m)",
+  CHLa = "CHLa (\u03BCg L\u207B\u00B9)",
+  NITROGEN_TOTAL = "TN (mg N L\u207B\u00B9)",
+  PHOSPHORUS_TOTAL = "TP (mg P L\u207B\u00B9)",
+  TSS = "TSS (mg L\u207B\u00B9)",
+  DIN = "DIN (mg N L\u207B\u00B9)",
+  CHLa_log10 = "log\u2081\u2080(CHLa) (\u03BCg L\u207B\u00B9)"
 )
 
-```
 
-```{r}
-# Plot for "SECCHI_DEPTH"
-plot_secchi <- ggplot() +
-  # Boxplots with continuous x-axis
-  geom_boxplot(
-    data = boxplot_data[["SECCHI_DEPTH"]] %>%
-      filter(Year >= 1995),
-    aes(x = interval_midpoint, y = yearly_mean, group = interval_midpoint),
-    color = "black",
-    width = 3.2,  # Adjust width as needed
-    outlier.shape = NA
-  ) +
-  # Jittered points
-  geom_jitter(
-    data = boxplot_data[["SECCHI_DEPTH"]] %>%
-      filter(Year >= 1995),
-    aes(x = interval_midpoint, y = yearly_mean),
-    width = 1, alpha = 0.2, size = 0.7
-  ) +
-  # Trend line
-  geom_line(
-    data = trend_data,
-    aes(x = Year, y = Trend),
-    color = "red", size = 1, alpha = 1
-  ) +
-  geom_text(data = obs_counts[["SECCHI_DEPTH"]], aes(x = interval_midpoint, y = max(boxplot_data[["SECCHI_DEPTH"]]$yearly_mean, na.rm = TRUE), 
-                                   label = paste("n =", n)), 
-            vjust = -0.5, size = 3, color = "black") +  # Add observation counts
-  # Labels and themes
-  labs(
-    title = NULL,
-    subtitle = paste("Slope:", round(df_reg$model_slope, 5), "p-value:", round(df_reg$model_pval, 5)),
-    x = NULL,
-    y = "Depth (m)"
-  ) +
-  # Adjust x-axis to display intervals
-  scale_x_continuous(
-    breaks = intervals_df$interval_midpoint,
-    labels = intervals_df$interval
-  ) +
-  theme_minimal() +
-  theme(
-    legend.position = "none",
-    axis.text.x = element_text(angle = 45, hjust = 1, size = 9)
+## !----------------- Custom plotting function -----------------! ##
+boxtrend_overlay <- function(current_var) {
+  
+  ## y limits for visualization
+  y_lims <- list(
+    SECCHI_DEPTH = 8.2,
+    CHLa = 125,
+    NITROGEN_TOTAL = 2,
+    PHOSPHORUS_TOTAL = .25,
+    TSS = 40,
+    DIN = 2,
+    CHLa_log10 = 2
   )
-
-print(plot_secchi)
-
- ggsave("figures/secchi_boxplot_trend_overlay.jpg", plot_secchi, height = 6, width = 8.2, units = "in", dpi = 600)
+  
+  # Calculate trend line data within the plotting function
+  df_avgs <- avg_df_list[[current_var]]
+  df_reg <- regressions_adjusted %>%
+    filter(variable == current_var)
+  
+  # Default start and end y-values for the trend line
+  start_y <- df_reg$adjusted_intercept
+  end_y <- df_reg$adjusted_intercept + df_reg$model_slope * (max(df_avgs$Year) - min(df_avgs$Year))
+  
+  # Calculate default x min and x max based on box plot edges
+  min_x <- min(boxplot_data[[current_var]]$interval_midpoint) - (3.2 / 2)
+  max_x <- max(boxplot_data[[current_var]]$interval_midpoint) + (3.2 / 2)
+  
+  # Special cases for CHLa_log10 and TSS
+  if (current_var == "CHLa_log10") {
+    start_x <- 1997 - (3.2 / 2) 
+    end_x <- max_x  # End at the default max
+    start_y <- df_reg$model_slope * (start_x - min(df_avgs$Year)) + df_reg$adjusted_intercept
+  } else if (current_var == "TSS") {
+    start_x <- 1982 - (3.2 / 2)
+    end_x <- 2002 + (3.2 / 2)
+    start_y <- df_reg$model_slope * (start_x - min(df_avgs$Year)) + df_reg$adjusted_intercept
+    end_y <- df_reg$model_slope * (end_x - min(df_avgs$Year)) + df_reg$adjusted_intercept
+  } else {
+    # Use default values for all other variables
+    start_x <- min_x
+    end_x <- max_x
+  }
+  
+  obs_counts[[current_var]]$label <- paste0("*", obs_counts[[current_var]]$n, "*")
+  
+  # Generate plot
+  plot <- ggplot() +
+    # Boxplots with continuous x-axis
+    geom_boxplot(
+      data = boxplot_data[[current_var]],
+      aes(x = interval_midpoint, y = yearly_mean, group = interval_midpoint),
+      color = "black",
+      width = 3.2,  # Adjust width as needed
+      outlier.shape = NA
+    ) +
+    # Jittered points
+    geom_jitter(
+      data = boxplot_data[[current_var]],
+      aes(x = interval_midpoint, y = yearly_mean),
+      width = 1, alpha = 0.3, size = 0.7
+    ) +
+    # Annotated trend line spanning from start_x to end_x with respective y values
+    annotate(
+      "segment",
+      x = start_x,
+      xend = end_x,
+      y = start_y,
+      yend = end_y,
+      color = "red", linewidth = .85, alpha = 1
+    ) +
+    geom_text(
+      data = obs_counts[[current_var]],
+      aes(x = interval_midpoint, y = y_lims[[current_var]], label = n),
+      vjust = -0.5, size = 3.7, color = "black"
+    ) +
+    labs(
+      title = NULL,
+      x = NULL,
+      y = y_titles[[current_var]]
+    ) +
+    # Adjust x-axis to display intervals
+    scale_x_continuous(
+      breaks = intervals_df$interval_midpoint,
+      labels = intervals_df$interval
+    ) +
+    scale_y_continuous(limits = c(0, y_lims[[current_var]])) +
+    theme_minimal() +
+    theme(
+      legend.position = "none",
+      axis.text.x = element_text(angle = 0, hjust = 0.5, size = 11),
+      axis.text.y = element_text(size = 11),
+      axis.line = element_line(color = "black"),
+      axis.title.y = element_text(size = 12)
+    )
+  
+  return(plot)
+}
 
 ```
 
 
+## Generate Plots
 
 ```{r}
-## SAND BOX
-## NOTE TO SELF: The reason there are so many fewer e.g. DIN station-years in the mblm model than in the  DIN vs TN plot is that we were not applying a year threshold to the DIN vs TN data set.
+# Create list of plots for each variable
+plots_list <- list()
 
-new <- all_vars_avg_df %>%
-  mutate(station_yr_var = paste(STATION_ID, Year, variable, sep = "-"))
-old <- read_csv("data/population_level_data/population_avg_data_ORIGINAL_error.csv") %>%
-  mutate(station_yr_var = paste(STATION_ID, Year, variable, sep = "-"))
+for (var in vars) {
+  plots_list[[var]] <- boxtrend_overlay(var)
+  
+  ggsave(paste0("figures/boxplot_trend_overlay_", var, ".jpg"), plots_list[[var]], width = 10, height = 7, units = "in", dpi = 1000)
+}
 
-# Which station_yr_var vals not present in the old data set??
-missing_in_old <- anti_join(new, old, by = "station_yr_var")
+plots_list
 
+```
 
-missing_in_old %>%
-  mutate(MAY_OCT_AVG = as.character(MAY_OCT_AVG))
+```{r}
+## OUTLIER EVALUATION
 
-# PHOSPHORUS_TOTAL	1991	4AROA192.55	0.133333333333333	4AROA192.55-1991-PHOSPHORUS_TOTAL
+# For TN, you had previously used a range up to 2 mg/L, which looked good.  But could you also check on the 4 data points that are > 4 mg/L.  If any of these are cases where there is a single monthly value that is unrealistically high (>5 mg/L) then that value should be dropped and the May-Oct average value re-calculated. 
 
-unique(missing_in_old$STATION_ID)
+avg_df_list[["NITROGEN_TOTAL"]] %>%
+  filter(MAY_OCT_AVG > 3)
+## all 4 vals above 4 are from the same station, 1BXEF000.23	 
+
+yrs_interest <- c(2009, 2010, 2015, 2016)
+x <- subset_data[["NITROGEN_TOTAL"]] %>%
+  filter(STATION_ID == "1BXEF000.23", Year %in% yrs_interest) %>%
+  select(Year, Month, NITROGEN_TOTAL)
+
+hist(x$NITROGEN_TOTAL,
+     main = "TN: Station 1BXEF000.23",
+     xlab = "TN mg/L")
+
+## For TP, you had previously used a range up to 0.3 mg/L, which looked good.  Here too, could you check on the 3 data points that are >1 mg/L to make sure these are not the result of a single monthly outlier.
+TP_above1  <- avg_df_list[["PHOSPHORUS_TOTAL"]] %>%
+  filter(MAY_OCT_AVG > 1)
+
+a <- subset_data[["PHOSPHORUS_TOTAL"]] %>%
+  filter(STATION_ID == "2-XDD000.40", Year == 2007) %>%
+  select(STATION_ID, Year, Month, PHOSPHORUS_TOTAL)
+b <- subset_data[["PHOSPHORUS_TOTAL"]] %>%
+  filter(STATION_ID == "5ASRN000.66", Year %in% c(2004, 2008, 2010)) %>%
+  select(STATION_ID, Year, Month, PHOSPHORUS_TOTAL)
+
+bind_rows(a, b)
+
 ```
